--- a/book.html
+++ b/book.html
@@ -12,25 +12,19 @@
     <div class="dashboard">
         <aside class="sidebar" id="sidebar">
             <div class="sidebar-header">
-                <button id="toggleSidebar" class="toggle-btn">
-                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <rect x="3" y="3" width="18" height="18" rx="2" />
-                        <path d="M9 3v18M3 12h18" />
-                    </svg>
-                </button>
             </div>
             <nav class="Featuredbooks">
                 <a href="index.html" class="nav-item">
                     <span class="nav-icon"></span>
-                    <span class="nav-label">Dashboard</span>
+                    <span class="nav-label">Dashboard📊</span>
                 </a>
                 <a href="book.html" class="nav-item active">
                     <span class="nav-icon"></span>
-                    <span class="nav-label">View Books</span>
+                    <span class="nav-label">View Books📚</span>
                 </a>
                 <a href="subsandfines.html" class="nav-item">
                     <span class="nav-icon"></span>
-                    <span class="nav-label">Subscriptions and Fines</span>
+                    <span class="nav-label">Subscriptions and Fines💳</span>
                 </a>
               
             </nav>
