--- a/subsandfines.html
+++ b/subsandfines.html
@@ -16,11 +16,11 @@
             <nav class="Featuredbooks">
                 <a href="index.html" class="nav-item">
                     <span class="nav-icon"></span>
-                    <span class="nav-label">Dashboard</span>
+                    <span class="nav-label">Dashboard📊</span>
                 </a>
                 <a href="book.html" class="nav-item">
                     <span class="nav-icon"></span>
-                    <span class="nav-label">View Books</span>
+                    <span class="nav-label">View Books📚</span>
                 </a>
                 <a href="subsandfines.html" class="nav-item  active">
                     <span class="nav-icon"></span>
