--- a/book.html
+++ b/book.html
@@ -31,7 +31,7 @@
             <div class="sidebar-footer">
                 <button class="btn-primary">
                     <span class="nav-icon"></span>
-                    <span class="nav-label">Log Out</span>
+                    <span class="nav-label">Log Out❌</span>
                 </button>
             </div>
         </aside>
